--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -17,6 +17,16 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 # underscore colores - needs tmux-3
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%P65536{%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
+# Vim-like pane-switching
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Shortcut window switching
+bind -n C-p previous-window
+bind -n C-n next-window
+
 run '~/.tmux/plugins/tpm/tpm'
 
 run-shell "powerline-daemon -q"
