Update tmux, vimrc, and zshrc

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -17,6 +17,9 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 # underscore colores - needs tmux-3
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%P65536{%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
+# renumber windows when deletions occur
+set -g renumber-windows on
+
 # Vim-like pane-switching
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
